# sfml-super-mario-bros

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/data/World1-1/: World1-1_Enemies.csv  World1-1_properties.json
assets/data/World1-2/: World1-2_Enemies.csv  World1-2_Foreground.csv  World1-2_properties.json
assets/data/World1-3/: World1-3_properties.json
assets/data/World1-4/: World1-4_properties.json
assets/data/World2-1/: World2-1_properties.json
assets/data/World2-2/: World2-2_properties.json
assets/data/World2-3/: World2-3_properties.json
assets/data/World2-4/: World2-4_properties.json
assets/data/World3-1/: World3-1_Foreground.csv  World3-1_properties.json
assets/data/World3-2/: World3-2_properties.json
assets/data/World3-3/: World3-3_properties.json
assets/data/World3-4/: World3-4_properties.json
assets/data/World4-1/: World4-1_properties.json
assets/data/World4-2/: World4-2_Foreground.csv  World4-2_properties.json
assets/data/World4-3/: World4-3_properties.json
assets/data/World4-4/: World4-4_properties.json
assets/data/World5-1/: World5-1_properties.json
assets/data/World5-2/: World5-2_properties.json
assets/data/World5-3/: World5-3_properties.json
assets/data/World5-4/: World5-4_properties.json
assets/data/World6-1/: World6-1_properties.json
assets/data/World6-2/: World6-2_properties.json
assets/data/World6-3/: World6-3_properties.json
assets/data/World6-4/: World6-4_properties.json
assets/data/World7-1/: World7-1_properties.json
assets/data/World7-2/: World7-2_properties.json
assets/data/World7-3/: World7-3_Foreground.csv  World7-3_properties.json
assets/data/World7-4/: World7-4_properties.json
assets/data/World8-1/: World8-1_properties.json
assets/data/World8-2/: World8-2_properties.json
assets/data/World8-3/: World8-3_properties.json
assets/data/World8-4/: World8-4_properties.json
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameWorld.cpp  GameWorld.h  Globals.h  LevelData.cpp  LevelData.h  Main.cpp  Map.cpp  Map.h  SharedContext.h  Window.cpp  Window.h
src/ECS/: Entity.h  World.h
src/ECS/components/: AboveForegroundComponent.h  AddLivesComponent.h  AddScoreComponent.h  AnimationComponent.h  AxeComponent.h  BackgroundComponent.h  BlockBumpComponent.h  BottomCollisionComponent.h  BowserComponent.h  BridgeChainComponent.h  BridgeComponent.h  BumpableComponent.h  CallbackComponent.h  CollectibleComponent.h  CollisionExemptComponent.h  Component.h  CreateFloatingTextComponent.h  CrushableComponent.h  CrushedComponent.h  DeadComponent.h  DestroyDelayedComponent.h  DestroyOutsideCameraComponent.h  DestructibleComponent.h  DownCollisionComponent.h  EndingBlinkComponent.h  EnemyComponent.h  EnemyDestroyedComponent.h  FireBarComponent.h  FlagComponent.h  FlagPoleComponent.h  FloatingTextComponent.h  ForegroundComponent.h  FrictionExemptComponent.h  FrozenComponent.h  GravityComponent.h  HammerBroComponent.h  IconComponent.h  InvisibleBlockComponent.h  LakituComponent.h  LeftCollisionComponent.h  (+24 more)
src/ECS/systems/: AnimationSystem.cpp  AnimationSystem.h  CallbackSystem.cpp  CallbackSystem.h  CollectibleSystem.cpp  CollectibleSystem.h  EnemySystem.cpp  EnemySystem.h  FlagSystem.cpp  FlagSystem.h  GameplayStatsSystem.cpp  GameplayStatsSystem.h  HUDSystem.cpp  HUDSystem.h  MapSystem.cpp  MapSystem.h  MenuSystem.cpp  MenuSystem.h  MusicSystem.cpp  MusicSystem.h  OptionsSystem.cpp  OptionsSystem.h  PausedSystem.cpp  PausedSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  SoundSystem.cpp  SoundSystem.h  System.h  WarpSystem.cpp  WarpSystem.h
src/commands/: Command.cpp  Command.h  CommandScheduler.cpp  CommandScheduler.h  DelayedCommand.h  PrintCommand.h  RunCommand.h  SequenceCommand.h  VineCommand.h  WaitCommand.h  WaitUntilCommand.h  WarpCommand.h
src/states/: BaseState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  PreGameState.cpp  PreGameState.h  StateManager.cpp  StateManager.h
src/utils/: AABB.cpp  AABB.h  PIDController.cpp  PIDController.h  ResourceHolder.h  ResourceIdentifiers.h
